source/_templates/plugin_layouts/sphinx_bootstrap/static/runestone-iwu-custom-sphinx-bootstrap.css
/* ... */
@media (max-width: 600px) {
    code, pre, kbd, samp, .CodeMirror {
        font-size: 80%;
    }
}

div.container {
    width: 100%;
    padding: 0;
}

div.flexcontainer {
    display: flex;
}

div#content-wrapper {
    flex-grow: 1;
    max-width: 100%;
    min-width: 0;  /* so flexbox will push beyond what CodeMirror might otherwise want when shrinking. */
    padding: 0 1em;
}
.container  .section >*:not(.section) {
	max-width: 500pt;
    /*
	margin-left: auto;
	margin-right: auto;
    */
}
/* This rule is meant to override the behavior of the
   previous rule since it is not possible to exclude
   more than one section in the not() part of the rule
*/
.container .section div.full-width.container {
	margin-left: auto;
	margin-right: auto;
    max-width: 90%;
}

.container .section > .table {
    width: unset;  /* don't need to stretch tables to 100%, which is what bootstrap seems to want */
}

.container .section a.image-reference {
    /* to get them centered within the weird width thing we have going here */
	display: block;
    margin: 1em auto;
}

div.figure {
    text-align: center;
    margin: 0;
    padding: 0;
}
div.figure p.caption {
    font-style: italic;
}
div.figure p.caption:before {
    content: "Figure " counter(figure) ": ";
    counter-increment: figure;
}

.container  .section .parsons, .container  .section .parsons .sortable-code-container, .container  .section .ac_section, .container  .section .cd_section{
	max-width: none !important;
}

.footer {
    padding: 10px;
    margin-top: 15px;
    background-color: #eee;
    color: #777;
    font-size: 12pt;
    line-height: 1.25em;
}

.loggedinuser {
    font-weight: bold;
}

/* end navbar and menu related styles */

/* inline code */
code {
    padding: 2px 3px 0 3px;
    color: #b44;
    background-color: #f5f5f0;
    border: 1px solid #ddd;
}

.btn.disabled {
    /* needed in Bootstrap 3 to allow tooltips on disabled buttons */
    pointer-events: auto;
}

input[type="radio"],
input[type="checkbox"] {
    margin-right: 5px;
}

.tooltip {
    z-index: 2000 !important;
}

.tooltip.in {
    opacity: 0.8;
    filter: alpha(opacity=80);
}

.alert form {
    margin-bottom: 0;
}

/* ActiveCode and CodeLens styling */
/* Flex, flex-wrap, and order to rearrange things without having to change runestonecomponents html */
div.ac_section, div.cd_section {
    color: #000;
    padding: 0 5px;
    border: none;
    margin: 1em 0;
}
div.ac_section > div.ac_section, div.cd_section > div {
    background: none;
    margin: 0.25em 0;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
}
div.ac_section div.ac_section .btn {
    margin: 0.25em;
}
div.ac_section > *, div.cd_section > * {
    margin: 0;
}
.ac_section > .col-md-12 {
    width: 100% !important;
}
@media (min-width: 512pt) {
    .ac_section > div, .ac_section > .col-md-12 {
        max-width: 500pt !important;
    }
}
@media (max-width: 513pt) {
    .ac_section > div, .ac_section > .col-md-12 {
        max-width: 100% !important;
    }
}
div.ac_actions {
    /* move after the code */
    order: 100;
}
.ac_caption, .cl_caption {
    font-style: italic;
    font-weight: normal;
    max-width: 500pt;
    text-align: center;
}

/* Copied/adapted from: video.css, for some reason, and so not included if we don't include the video extension... */
.cl_caption:before {
    content: "CodeLens " counter(codelens) ": ";
    counter-increment: codelens;
}
.ac_caption:before {
    content: "ActiveCode " counter(codelens) ": ";
    counter-increment: codelens;
}
/* End copy from video.css. */

div.ExecutionVisualizer {
    padding: 1em;
    border: solid 2px #aaa;
}
div.ExecutionVisualizer table.visualizer {
    width: auto;
    margin: 0;
}

/* override alert-warning that runestone seems to use everywhere */
.runestone.alert-warning, .runestone .alert-warning {
    color: unset;
    background: unset;
    border: unset;
}

/* override the color styles applied by Skulpt to the unittest results divs */
.unittest-results.alert-danger {
    background-color: #f2dede !important;
}
.unittest-results.alert-success {
    background-color: #dff0d8 !important;
}
.unittest-results {
    width: 100%;
    text-align: center;
}
.unittest-results table {
    margin: auto;
}
.ac-feedback {
    border: 1px solid #ccc;
    padding: 0.1em 0.5em;
}

.alert label {
    font-weight: normal;
}

/* These admonition styles styles are copied from the Bootstrap .alert classes.
 Most of the !important declarations are to override the Sphinx basic.css styles */
.admonition {
    padding: 8px 14px 8px 14px !important;
    margin-bottom: 20px !important;
    margin-top: 20px !important;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    /* Because runestone adds .alert and .alert-info on some of these instead
     * of just using admonition on these... */
    color: inherit;
}

/* .alert-danger */
.admonition.caution {
    background-color: #f2dede;
    border-color: #eed3d7;
}

/* .alert-info */
.admonition.tip, .admonition.note {
    background-color: #d9edf7;
    border-color: #bce8f1;
}

/* .alert-success */
.admonition-syntax-rule,
.admonition-syntax-pattern,
.admonition-definition {
    background-color: #dff0d8;
    border-color: #d6e9c6;
}

.admonition-check-your-understanding {
    width: 100%;
    max-width: unset !important;
    background: none;
    box-shadow: 0px 0px 4px 1px rgba(200,150,0,0.5);
}

/* for todos from sphinx.ext.todo */
.admonition-todo {
    background-color: #fa9;
    border-color: #d98;
}
/* ... */

